# labyrinth_game

./: .clang-format  CMakeLists.txt  DEVELOPMENT_PLAN.md  GameLoop.hpp  IInput.hpp  InputCommand.hpp  KeyboardInput.cpp  KeyboardInput.hpp  README.md  test_infra_console_renderer.cpp  test_infra_logger.cpp  test_infra_rng_std.cpp  test_keyboard
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
docs/: DEVELOPMENT_PLAN.md  TEAM_GUIDE.md  core_domain_model_ClassD.puml  layers_ComponentD.puml
docs/diagrams/: IO_ComponentD.puml  core_domain_model_ClassD.puml  enemy_ai_AD.puml  game_loop_SD.puml  general_SMD.puml  layers_ComponentD.puml
src/: main.cpp
src/app/loop/: GameLoop.cpp  GameLoop.hpp  IInput.hpp  IRenderer.hpp  InputCommand.hpp
src/app/persistence/: ISaveGameRepo.hpp
src/app/systems/: ActorSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  EnemyAISystem.cpp  EnemyAISystem.hpp  PickupSystem.cpp  PickupSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  WinLoseSystem.cpp  WinLoseSystem.hpp
src/app/usecases/: ConfigLoadUseCase.cpp  ConfigLoadUseCase.hpp  IConfigLoader.hpp  LoadGameUseCase.cpp  LoadGameUseCase.hpp  NewGameUseCase.cpp  NewGameUseCase.hpp  SaveGameUseCase.cpp  SaveGameUseCase.hpp
src/domain/core/: Direction.hpp  EntityId.hpp  GameState.hpp  Glyph.hpp  Grid.hpp  IRng.hpp  Position.hpp  Stats.hpp  Version.cpp  Version.hpp  version.cpp  version.hpp
src/domain/entities/: GridTile.hpp  Map.cpp  Map.hpp  Tile.hpp  TileType.hpp
src/domain/entities/actors/: Actor.hpp  Enemy.cpp  Enemy.hpp  EnemyState.hpp  Player.cpp  Player.hpp
src/domain/entities/items/: HealthPotion.hpp  Item.hpp  Key.hpp
src/domain/rules/: GameRules.hpp
src/domain/services/: DamageCalculator.cpp  DamageCalculator.hpp  LOS.cpp  LOS.hpp  MapGen.cpp  MapGen.hpp  MapGenHelpers.cpp  MapGenHelpers.hpp  Pathfinding.cpp  Pathfinding.hpp  SpawnPolicy.cpp  SpawnPolicy.hpp  WinLosePolicy.cpp  WinLosePolicy.hpp
src/infra/config/: ConfigLoader.cpp  ConfigLoader.hpp
src/infra/io_console/: ConsoleRenderer.cpp  ConsoleRenderer.hpp  KeyboardInput.cpp  KeyboardInput.hpp
src/infra/log/: Logger.hpp
src/infra/persistence_file/: FileSaveGameRepo.cpp  FileSaveGameRepo.hpp
src/infra/rng_std/: StdRng.cpp  StdRng.hpp
tests/: CMakeLists.txt  test_sanity.cpp
tests/app/: test_app_game_loop.cpp  test_app_systems.cpp  test_app_usecases.cpp
tests/domain/: dummy_rng.hpp  test_domain_damage.cpp  test_domain_is_transparent.cpp  test_domain_los.cpp  test_domain_mapgen.cpp  test_domain_mapgen_helpers.cpp  test_domain_pathfinding.cpp  test_domain_spawn.cpp  test_domain_winlose.cpp
tests/includes/: test_utils.hpp
tests/infra/: test_infra_console_renderer.cpp  test_infra_file_repo.cpp  test_infra_keyboard_input.cpp  test_infra_logger.cpp  test_infra_rng_std.cpp
